[gd_scene load_steps=2 format=3 uid="uid://dd1icw07oy57v"]

[ext_resource type="Script" path="res://Scenes/MainMenu.gd" id="1_xof8h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xof8h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -67.5
offset_right = 200.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Title"
horizontal_alignment = 1

[node name="HostGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="MatchIDInput" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Insert match_id here & Click \"Join Game\""
